# ESP

./: CMakeLists.txt  IMU_movement.c  IMU_movement.h  Obstacle_Avoidance.c  Obstacle_Avoidance.h  PID_Line_Follow.c  PID_Line_Follow.h  barcode.c  barcode.h  encoder.c  encoder.h  imu_raw_demo.h  ir_sensor.c  ir_sensor.h  lwipopts.h  lwipopts_examples_common.h  main.c  motor_encoder_demo.c  motor_encoder_demo.h  mqtt_client.c  mqtt_client.h  picow_freertos_ping.c  picow_freertos_ping.h  platform_time_pico.c  ultrasonic.c  ultrasonic.h
dashboard/: index.html  readme.txt
